# av-rs

./: .gitattributes  .markdownlint.yaml  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: nvidia.yml  rust.yml
.trunk/: trunk.yaml
av-traits/: Cargo.toml  README.md
av-traits/src/: audio_encoder.rs  lib.rs  video_encoder.rs
encoders/: Cargo.toml  README.md
encoders/src/: audio_encoder.rs  dyn_audio_encoder.rs  dyn_video_encoder.rs  fdk_aac_encoder.rs  lib.rs  video_encoder.rs  x264_encoder.rs
ffmpeg/: Cargo.toml  README.md
ffmpeg/src/: avio.rs  lib.rs
ffmpeg/src/avformat/: avio.rs  mod.rs
ffmpeg/src/avutil/: mod.rs
ffmpeg/tests/avformat/avio/: bad_reader_lifetime.rs  bad_reader_lifetime.stderr  bad_writer_lifetime.rs  bad_writer_lifetime.stderr
ffmpeg/tests/avio/: bad_reader_lifetime.rs  bad_reader_lifetime.stderr  bad_writer_lifetime.rs  bad_writer_lifetime.stderr
h264/: Cargo.toml
h264/benches/: iterate_annex_b.rs
h264/src/: bitstream.rs  lib.rs  nal_unit.rs  sei.rs  sequence_parameter_set.rs  slice_header.rs  syntax_elements.rs
h265/: Cargo.toml
h265-tile-join/: Cargo.toml  README.md
h265-tile-join/src/: lib.rs  main.rs
h265-tile-mux/: Cargo.toml  README.md
h265-tile-mux/src/: h265_tile_muxer.rs  lib.rs  main.rs
h265/src/: lib.rs  nal_unit.rs  picture_parameter_set.rs  profile_tier_level.rs  sequence_parameter_set.rs  slice_segment_header.rs  syntax_elements.rs  video_parameter_set.rs
hmp/: Cargo.toml  README.md
hmp/src/: api.rs  lib.rs
kvazaar-sys/: Cargo.toml  build.rs
kvazaar-sys/src/: lib.hpp  lib.rs
macos/audio-toolbox/: Cargo.toml  build.rs
macos/audio-toolbox/src/: audio_queue.rs  lib.rs
macos/av-foundation/: Cargo.toml  build.rs
macos/av-foundation/src/: av_capture_device.mm  av_capture_device.rs  av_capture_input.rs  av_capture_output.rs  av_capture_session.mm  av_capture_session.rs  av_capture_video_data_output.mm  av_capture_video_data_output.rs  av_media_type.h  av_media_type.mm  av_media_type.rs  lib.mm  lib.rs
macos/core-audio/: Cargo.toml  build.rs
macos/core-audio/src/: lib.rs
macos/core-foundation/: Cargo.toml  build.rs
macos/core-foundation/src/: array.rs  base.rs  boolean.rs  dictionary.rs  lib.rs  number.rs  string.rs
macos/core-media/: Cargo.toml  build.rs
macos/core-media/src/: block_buffer.rs  format_description.rs  lib.hpp  lib.rs  sample_buffer.rs  time.rs  video_codec_type.rs
macos/core-video/: Cargo.toml  build.rs
macos/core-video/src/: image_buffer.rs  lib.rs  pixel_buffer.rs
macos/foundation/: Cargo.toml  build.rs
macos/foundation/src/: lib.mm  lib.rs  nserror.mm  nserror.rs  nsstring.mm  nsstring.rs
macos/video-toolbox/: Cargo.toml  build.rs
macos/video-toolbox/examples/: list-encoders.rs
macos/video-toolbox/src/: compression_session.rs  decompression_session.rs  lib.hpp  lib.rs  video_encoder.rs  video_encoder_list.rs
mpeg2/: Cargo.toml
mpeg2/src/: bitstream.rs  interleaving_muxer.rs  lib.rs  muxer.rs  pes.rs  temi.rs  ts.rs
mpeg2/src/testdata/: audio_video_pts.txt  uk_psb1_temi.ts
mpeg4/: Cargo.toml
mpeg4/src/: lib.rs
mpegts-segmenter/: Cargo.toml
mpegts-segmenter/benches/: benches.rs
mpegts-segmenter/src/: analyzer.rs  lib.rs  segmenter.rs  segmentstorage.rs
mpegts-segmenter/src/testdata/: audio-only.ts  h264-8k.ts  h265-cropped.ts  h265.ts  restart.ts  segment-with-cropping.ts  temi_timeline-ntp-ts.ts
nvidia-video-sdk/: Cargo.toml  build.rs
nvidia-video-sdk/src/: lib.rs
qtff/: Cargo.toml  README.md
qtff/src/: atom.rs  data.rs  deserializer.rs  file.rs  lib.rs  moof.rs  serializer.rs
qtff/src/testdata/: braw_trimmed.braw
rfc6381/: Cargo.toml  README.md
rfc6381/src/: lib.rs
rkmpp/: Cargo.toml  README.md
rkmpp/examples/: encode.rs
rkmpp/rkmpp-sys/: Cargo.toml  build.rs
rkmpp/rkmpp-sys/src/: lib.h  lib.rs
rkmpp/src/: encoder.rs  lib.rs  mpp.rs
src/: atom.rs  data.rs  deserializer.rs  error.rs  file.rs  lib.rs  serializer.rs
src/testdata/: empty.mov
srt/: Cargo.toml  build.rs
srt/src/: async_lib.rs  epoll_reactor.rs  lib.rs  sys.rs
srt/srt-sys/: Cargo.toml  build.rs
srt/srt-sys/src/: lib.rs
utils/: Cargo.toml
utils/src/: main.rs
v4l2/: Cargo.toml
v4l2/src/: encoder.rs  lib.rs
x264/: Cargo.toml
x264-sys/: build.rs
x264-sys/src/: lib.rs
x264/src/: encoder.rs
x264/x264-sys/: Cargo.toml  build.rs
x264/x264-sys/src/: lib.c  lib.h  lib.rs
xcoder/: Cargo.toml  logging_shim.c  logging_shim.rs
xcoder/src/: encoder.rs  lib.rs
xcoder/xcoder-logan/: Cargo.toml
xcoder/xcoder-logan/src/: common.rs  encoder.rs
xcoder/xcoder-logan/src/encoder/: mod.rs  xcoder_259.rs  xcoder_310.rs
xcoder/xcoder-logan/xcoder-logan-259-sys/: Cargo.toml  build.rs
xcoder/xcoder-logan/xcoder-logan-259-sys/src/: lib.hpp  lib.rs
xcoder/xcoder-logan/xcoder-logan-310-sys/: Cargo.toml  build.rs
xcoder/xcoder-logan/xcoder-logan-310-sys/src/: header.h  lib.hpp  lib.rs
xcoder/xcoder-logan/xcoder-logan-310-sys/tests/: logging.rs
xcoder/xcoder-logan/xcoder-logan-sys/: Cargo.toml  build.rs
xcoder/xcoder-quadra/: .gitattributes  Cargo.toml
xcoder/xcoder-quadra/src/: common.rs  cropper.rs  decoder.rs  encoder.rs  lib.rs  scaler.rs
xcoder/xcoder-quadra/src/testdata/: 8k-high-bitrate.h265
xcoder/xcoder-quadra/xcoder-quadra-sys/: Cargo.toml  README.md  build.rs
xcoder/xcoder-quadra/xcoder-quadra-sys/src/: lib.hpp  lib.rs
xcoder/xcoder-quadra/xcoder-quadra-sys/tests/: logging.rs
xcoder/xcoder-sys/: Cargo.toml  build.rs
xcoder/xcoder-sys/src/: lib.h
xilinx/: Cargo.toml  build.rs
xilinx/src/: bindings.h  lib.rs  sys.rs  xlnx_dec_props.rs  xlnx_dec_utils.rs  xlnx_decoder.rs  xlnx_enc_props.rs  xlnx_enc_utils.rs  xlnx_encoder.rs  xlnx_error.rs  xlnx_scal_props.rs  xlnx_scal_utils.rs  xlnx_scaler.rs  xlnx_transcoder_utils.rs  xrm_context.rs
xilinx/src/testdata/: hvc1.1.6.L150.90.h265  hvc1.1.6.L150.90.ts  smptebars.h264  smptebars.yuv
