[workspace]

members = [
    "srt",
    "h264",
    "h265",
    "h265-tile-mux",
    "hmp",
    "macos/core-foundation",
    "macos/core-media",
    "macos/core-video",
    "macos/video-toolbox",
    "mpeg2",
    "mpegts-segmenter",
    "mpeg4",
    "qtff",
    "utils",
    "rfc6381",
    "kvazaar-sys"
]
