[workspace]

members = [
    "srt",
    "h264",
    "h265",
    "h265-tile-mux",
    "h265-tile-join",
    "hmp",
    "macos/foundation",
    "macos/av-foundation",
    "macos/core-audio",
    "macos/core-foundation",
    "macos/core-media",
    "macos/core-video",
    "macos/audio-toolbox",
    "macos/video-toolbox",
    "mpeg2",
    "mpegts-segmenter",
    "mpeg4",
    "qtff",
    "rfc6381",
    "kvazaar-sys",
    "encoders",
]
