[workspace]
resolver = "2"

members = [
    "av-traits",
    "ffmpeg",
    "srt",
    "srt/srt-sys",
    "h264",
    "h265",
    "h265-tile-mux",
    "h265-tile-join",
    "hmp",
    "macos/foundation",
    "macos/av-foundation",
    "macos/core-audio",
    "macos/core-foundation",
    "macos/core-media",
    "macos/core-video",
    "macos/audio-toolbox",
    "macos/video-toolbox",
    "mpeg2",
    "mpegts-segmenter",
    "mpeg4",
    "qtff",
    "rfc6381",
    "kvazaar-sys",
    "v4l2",
    "xcoder",
    "xcoder/xcoder-logan",
    "xcoder/xcoder-logan/xcoder-logan-259-sys",
    "xcoder/xcoder-logan/xcoder-logan-310-sys",
    "xcoder/xcoder-quadra",
    "xcoder/xcoder-quadra/xcoder-quadra-sys",
    "xilinx",
    "x264",
    "x264/x264-sys",
]
