[package]
name = "ffmpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
# XXX: ffmpeg-sys doesn't seem to build without avcodec.
ffmpeg-sys = {git = "https://github.com/meh/rust-ffmpeg-sys", rev="8ba86ee3f9b85a3ad86002d980fb518f5e90afb1", default-features = false, features = ["avcodec"] }
thiserror = "1.0"

[features]
avcodec = ["ffmpeg-sys/avcodec"]
avfilter = ["ffmpeg-sys/avfilter"]
avformat = ["ffmpeg-sys/avformat"]
swscale = ["ffmpeg-sys/swscale"]

[dev-dependencies]
trybuild = "1.0"
