[package]
name = "ffmpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
# XXX: ffmpeg-sys-next doesn't seem to build without avcodec.
ffmpeg-sys = { package = "ffmpeg-sys-next", version = "6.0.1", default-features = false, features = ["avcodec"] }
thiserror = "1.0"

[features]
avcodec = ["ffmpeg-sys/avcodec"]
avfilter = ["ffmpeg-sys/avfilter"]
avformat = ["ffmpeg-sys/avformat"]
swscale = ["ffmpeg-sys/swscale"]

[dev-dependencies]
trybuild = "1.0"
