[package]
name = "nvidia-video-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"]}

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"
which = "7.0.2"
