[package]
name = "qtff"
version = "0.1.0"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde = "1.0.104"
serde_derive = "1.0.104"
either = "1.5.3"
tempfile = "3.1.0"
