[package]
name = "rfc6381"
version = "0.1.0"
edition = "2018"

[features]
default = []
ffmpeg = ["ffmpeg-sys"]

[dependencies]
h264 = { path = "../h264" }
h265 = { path = "../h265" }
ffmpeg-sys = {version = "4.0.2", git = "https://github.com/meh/rust-ffmpeg-sys", default-features = false, features = ["avcodec"], optional = true}
