[package]
name = "srt"
version = "0.1.0"
edition = "2018"

[features]
default = []
async = ["tokio", "srt-sys/async"]

[dependencies]
libc = "0.2.71"
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["macros", "io-util", "rt-multi-thread"], optional = true }
srt-sys = { path = "srt-sys" }
