[package]
name = "srt"
version = "0.1.0"
edition = "2018"

[features]
default = []
async = ["tokio", "srt-sys/async"]

[dependencies]
log = "0.4"
libc = "0.2.71"
lazy_static = "1.4.0"
num-derive = "0.4"
num-traits = "0.2"
tokio = { version = "1.0", features = ["macros", "io-util", "rt-multi-thread"], optional = true }
srt-sys = { path = "srt-sys" }
