[package]
name = "xcoder"
version = "0.1.0"
edition = "2021"

[features]
default = ["quadra"]
quadra = ["xcoder-quadra"]
logan = ["xcoder-logan"]
logan-v2-compat = ["xcoder-logan/v2-compat"]

[dependencies]
xcoder-quadra = { path = "./xcoder-quadra", optional = true }
xcoder-logan = { path = "./xcoder-logan", optional = true }
