[package]
name = "xilinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-sys = {version = "4.3.3", git = "https://github.com/meh/rust-ffmpeg-sys", default-features = false, features = ["avcodec", "avformat", "avfilter", "swscale"]}
libloading = "0.7"
simple-error = "0.2.1"

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"