[package]
name = "video-toolbox"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"

[dependencies]
av-traits = { path = "../../av-traits" }
core-foundation = { path = "../core-foundation" }
core-media = { path = "../core-media" }
core-video = { path = "../core-video" }
tracing = "0.1.37"

[dev-dependencies]
h264 = { path = "../../h264" }
textwrap = "0.16.0"

[[example]]
name = "list-encoders"
