[package]
name = "xcoder-logan"
version = "0.1.0"
edition = "2021"

[dependencies]
av-traits = { path = "../../av-traits" }
h264 = { path = "../../h264" }
snafu = { version = "0.7.0", default-features = false }
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcoder-logan-sys = { path = "xcoder-logan-sys" }
