[package]
name = "xcoder-logan"
version = "0.1.0"
edition = "2021"

[features]
default = []

# When used, the crate will also compile and link to the 2.5.9 software,
# allowing the use of NETINT devices on either 2.X or 3.X firmwares.
v2-compat = ["xcoder-logan-259-sys"]

[dependencies]
av-traits = { path = "../../av-traits" }
h264 = { path = "../../h264" }
snafu = { version = "0.7.0", default-features = false }
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcoder-logan-259-sys = { path = "xcoder-logan-259-sys", optional = true }
xcoder-logan-310-sys = { path = "xcoder-logan-310-sys" }
