[package]
name = "xcoder-quadra"
version = "0.1.0"
edition = "2021"

[dependencies]
av-traits = { path = "../../av-traits" }
snafu = { version = "0.7.0", default-features = false }
scopeguard = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcoder-quadra-sys = { path = "xcoder-quadra-sys" }
