[package]
name = "xcoder-quadra"
version = "0.1.0"
edition = "2021"

[dependencies]
av-traits = { path = "../../av-traits" }
snafu = "0.8.0"
scopeguard = "1.1.0"

[dev-dependencies]
h264 = { path = "../../h264" }
h265 = { path = "../../h265" }
snafu = { version = "0.8.0", features = ["std"] }
rayon = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
xcoder-quadra-sys = { path = "xcoder-quadra-sys" }
