[package]
name = "xcoder-quadra-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4"

[build-dependencies]
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"
cc = "1.0"

[dev-dependencies]
cstr = "0.2.12"
